--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="https://www.allrecipes.com/thmb/8R6Zb5Cvs5Rwj0Jaf6PCdCOmDls=/160x90/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/12011-Easy-Lasagna-DDMFS-4x3-1491-62dd050e31b849f1bb54e13becf5cb98.jpg" alt="image of lasagna">
+    <h3>Description</h3>
+    <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>Beef</li>
+        <li>spaghetti sauce</li>
+        <li>cheeses</li>
+        <li>Eggs</li>
+        <li>Seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Water</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Cook and drain the ground beef , then stir in the spaghetti sauce and simmer.</li>
+        <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
+        <li>Assemble the lasagna according to the detailed recipe.</li>
+        <li>Bake, covered, for 45 minutes.</li>
+        <li>Uncover and continue baking for 10 minutes.</li>
+    </ol>
 </body>
 </html>
